<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actvities.ActivityPedido">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id" />
        <EditText
            android:id="@+id/hint_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cliente" />
        <EditText
            android:id="@+id/hint_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cliente" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_data"/>
        <EditText
            android:id="@+id/hint_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_data"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_produto"/>
        <EditText
            android:id="@+id/hint_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_produto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_valor"/>
        <EditText
            android:id="@+id/hint_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_valor"/>

        <Button
            android:id="@+id/button_clic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clic" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>